# dephell_versioning

./: .gitignore  .travis.yml  README.md  appveyor.yml  pyproject.toml  setup.cfg
dephell_versioning/: __init__.py  _api.py  _core.py
dephell_versioning/_schemes/: __init__.py  _base.py  _calver.py  _comver.py  _pep.py  _roman.py  _romver.py  _semver.py  _serial.py  _zerover.py
dephell_versioning/rules/: __init__.py  _base.py  _roman.py  _serial.py
dephell_versioning/schemes/: __init__.py  _base.py  _roman.py
tests/: test_calver.py  test_comver.py  test_pep.py  test_roman.py  test_semver.py  test_serial.py
